fix padding problem in cross browser capability on firefox and safari

--- a/src/scss/_map.scss
+++ b/src/scss/_map.scss
@@ -61,8 +61,9 @@ section.map {
                     font-size: 14px;
                 }
                 input {
+                    box-sizing: border-box;
                     height: 34px;
-                    padding: 10px;
+                    padding: 5px;
                     @include tablet () {
                         margin-bottom: 20px;
                     }
